--- a/BusTicketReservationSystem/BusTicketReservationSystem/web.config
+++ b/BusTicketReservationSystem/BusTicketReservationSystem/web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
 	<connectionStrings>
-  <add name="Conn" connectionString="Data Source=LAPTOP-KD42JHPQ;Initial Catalog=BTRS;Integrated Security=True"
+  <add name="Conn" connectionString="Data Source=XYZ;Initial Catalog=BTRS;Integrated Security=True"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
 	
